  * clean up flag paths (reasonable rounding) by @samhocevar #411
  * better Python code snippet in FAQ by @kolibril13 #405
  * adjusting and cleaning up openmoji meta data by @waldyrious
    #407 #406 #392 #391 #389 #388 #435 #432
  * adjust openmoji tags of nature-related emoji by @waldyrious #427
  * fix key emojis to not show color outside of the outlines by @rosseljost #448

  #426 by @RobertWinslow
  * Several paths have had superfluous colinear points removed (tophat and math symbols)
  * Several math symbols were centered
  * 1FAD7 (pouring liquid) was reworked to have thicker lines
  * The lines in 1F6EB and 1F6EC (airplane takeoff and landing) were likewise thickened
  * The post office symbol in 1F3E3 was made blockier and red
  * 1F691 (ambulance) was updated to have the correct symbol, the Star of Life #419 #417
  * The black version of the moon phases now has a black fill
  * 1F5C2 and 1F4C7 have made more distinct
  * 1F4C7 redesigned to be more similar to other emoji sets
  * The black flag 1F3F4 has had a path closed and reversed.
  * Lighten the background of 1F233
  * The 'E' in 1F4E7 (e-mail) has been rounded and copied into the line-supplement layer.

--------------------------------------------------------------------------------

🏖🍦 OpenMoji 14.0 - 05 Jul 2022

Emoji 14:
  * 1F91D 🤝 Handshake changed to have multiple skintones
  + 1FAD9 Jar by @fuddl #315
  + 1FAE6 biting lip by @fuddl #364
  + 1FAE7 bubbles by @fuddl #364
  + 1F6DF, 1F979, 1FAA9, 1FAE0, 1FAE2, 1FAE4, 1FAE5 by Liz Bravo @lizbravob
  + 1F6DD, 1F6DE, 1F7F0, 1F9CC, 1FA7B, 1FA7C, 1FAAA, 1FAAB, 1FAAC, 1FAB7,
    1FAB8, 1FAB9, 1FABA, 1FAC3, 1FAC4, 1FAC5, 1FAD7, 1FAD8, 1FAE1, 1FAE3,
    1FAF0, 1FAF1, 1FAF2, 1FAF3, 1FAF4, 1FAF5, 1FAF6
    by Aileen Gedrat, Alan Seng, Alena Peichl, Jana Gerspach, Jana Junk,
    Klara Schöninger, Max Isele, Natalie Siebler, Niklas Kuntz, Pia Stockhaus,
    Robin Bauer, Tim Loose

🙏 Special thanks to @stephanbogner for shiny old new website