@@ -2559,7 +2559,7 @@ emoji,hexcode,group,subgroups,annotation,tags,openmoji_tags,openmoji_author,open
 🍼,1F37C,food-drink,drink,baby bottle,"baby, bottle, drink, milk","baby, drink, sweet",Laura Humpfer,2018-04-18,,,,,1,3430
 🥛,1F95B,food-drink,drink,glass of milk,"drink, glass, milk",,Laura Humpfer,2018-04-18,,,,,3,3431
 ☕️,2615,food-drink,drink,hot beverage,"beverage, coffee, drink, hot, steaming, tea",,Alexander Müller,2020-05-11,,,,,0.6,3432
-🫖,1FAD6,food-drink,drink,teapot,"drink, pot, tea",,Liz Bravo,2020-07-21,,,,,13,3433
+🫖,1FAD6,food-drink,drink,teapot,"drink, pot, tea",,Andrew Luckett,2023-05-16,,,,,13,3433
 🍵,1F375,food-drink,drink,teacup without handle,"beverage, cup, drink, tea, teacup","glass, hot",Laura Humpfer,2018-04-18,,,,,0.6,3434
 🍶,1F376,food-drink,drink,sake,"bar, beverage, bottle, cup, drink",,Laura Humpfer,2018-04-18,,,,,0.6,3435
 🍾,1F37E,food-drink,drink,bottle with popping cork,"bar, bottle, cork, drink, popping","party, celebrate, event",Laura Humpfer,2018-04-18,,,,,1,3436
