@@ -43527,8 +43527,8 @@
     "annotation": "teapot",
     "tags": "drink, pot, tea",
     "openmoji_tags": "",
-    "openmoji_author": "Liz Bravo",
-    "openmoji_date": "2020-07-21",
+    "openmoji_author": "Andrew Luckett",
+    "openmoji_date": "2023-05-16",
     "skintone": "",
     "skintone_combination": "",
     "skintone_base_emoji": "",
