@@ -35890,7 +35890,7 @@
             <td>teapot</td>
             <td>drink, pot, tea</td>
             <td></td>
-            <td>Liz Bravo</td>
+            <td>Andrew Luckett</td>
             <td><a download href="src/food-drink/drink/1FAD6.svg">⬇</a></td>
         </tr>
         <tr>
